--- a/shigetsuCoach_Bot/shigetsuCoach_Bot.csproj
+++ b/shigetsuCoach_Bot/shigetsuCoach_Bot.csproj
@@ -6,6 +6,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="EntityFramework" Version="6.4.4" />
     <PackageReference Include="System.Drawing.Common" Version="5.0.2" />
     <PackageReference Include="Telegram.Bot" Version="15.7.1" />
   </ItemGroup>
