--- a/.gitignore
+++ b/.gitignore
@@ -4,7 +4,7 @@
 ## Get latest from https://github.com/github/gitignore/blob/master/VisualStudio.gitignore
 
 
-ConfigSettings.cs
+shigetsuCoach_Bot\Models\ConfigSettings.cs
 
 # User-specific files
 *.rsuser
